internal/kgateway/agentgatewaysyncer/testdata/outputs/trafficpolicy/extauth-listener.yaml
Addresses:
  - service:
      hostname: example-svc.default.svc.cluster.local
      name: example-svc
      namespace: default
      ports:
        - servicePort: 80
  - service:
      hostname: ext-authz.default.svc.cluster.local
      name: ext-authz
      namespace: default
      ports:
        - appProtocol: HTTP2
          servicePort: 4444
          targetPort: 9000
Binds:
  - key: 80/default/example-gateway
    port: 80
  - key: 90/default/example-gateway
    port: 90
Listeners:
  - bindKey: 90/default/example-gateway
    gatewayName: default/example-gateway
    key: default-example-gateway-bar
    name: bar
    protocol: HTTP
  - bindKey: 80/default/example-gateway
    gatewayName: default/example-gateway
    key: default-example-gateway-foo
    name: foo
    protocol: HTTP
Routes:
  - backends:
      - backend:
          port: 80
          service: default/example-svc.default.svc.cluster.local
        weight: 1
    hostnames:
      - example.com
    key: default.example-route.0.0.bar
    listenerKey: default-example-gateway-bar
    routeName: default/example-route
  - backends:
      - backend:
          port: 80
          service: default/example-svc.default.svc.cluster.local
        weight: 1
    hostnames:
      - example.com
    key: default.example-route.0.0.foo
    listenerKey: default-example-gateway-foo
    routeName: default/example-route
Policies:
  - name: trafficpolicy/default/secure-route-policy/example-gateway:extauth
    target:
      listener: default-example-gateway-foo
    spec:
      ext_authz:
        target:
          service: default/ext-authz.default.svc.cluster.local
          port: 4444
